src/tests/cases/snapshots/jett__tests__cases__ui__delete_folder.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 12.0K (4 files), freed: 0 | /tmp/jett_tests/delete_folder                                                                                                                             
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────────────────┐
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                            file2                                                            │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                         4.0K (33%)                                                          │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                 subfolder1/ (+1 descendants)                 │
│                                                                                                                             │                          4.0K (33%)                          │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                            file3                                                            │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                         4.0K (33%)                                                          │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │ 1 items; % of folder                                         │
│                                                                                                                             │ #1 file1         [####################################] 100% │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <t> - themes, <q> - quit                               DRY-RUN OFF
