src/tests/cases/snapshots/jett__tests__cases__ui__delete_folder_no_confirmation-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                                      Deleting                                                                       │                   
                    │                                                                                                                                                     │                   
                    │                                              /tmp/jett_tests/delete_folder_no_confirmation/subfolder1                                               │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                   
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                            q    quit                                                         

